Added gitignore file to project

--- a/cucumber-app/.gitignore
+++ b/cucumber-app/.gitignore
@@ -1,9 +1,8 @@
-# ignore all bin directories
-# matches "bin" in any subfolder
-bin/
+# Eclipse
+.classpath
+.project
+.settings/
 
-# ignore all target directories
+# Maven
+log/
 target/
-
-# ignore all files ending with ~
-*~
