--- a/cucumber-app/pom.xml
+++ b/cucumber-app/pom.xml
@@ -15,6 +15,16 @@
   </properties>
 
   <dependencies>
+  	<dependency>
+        <groupId>org.seleniumhq.selenium</groupId>
+        <artifactId>selenium-java</artifactId>
+        <version>2.42.2</version>
+    </dependency>
+    <dependency>
+		<groupId>com.github.detro.ghostdriver</groupId>
+		<artifactId>phantomjsdriver</artifactId>
+		<version>1.1.0</version>
+	</dependency>  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -22,4 +32,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <build>
+  	<plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
